--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -222,7 +222,7 @@ body {
 }
 
 .about {
-    height: 500px;
+    height: auto;
     width: 100%;
     background-color: aliceblue;
     border-radius: 1rem;
