--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -346,6 +346,7 @@ body {
         font-size: 1rem;
         padding-right: 0;
         justify-content: start;
+        margin-top:0px;
         margin-left: 0.2rem;
         margin-right: 0.5rem;
     }
