--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -350,6 +350,8 @@ body {
         margin-top:0px;
         margin-left: 0.2rem;
         margin-right: 0.5rem;
+        position:absolute;
+        top:0;
     }
 
     .abt-info {
