--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -351,7 +351,7 @@ body {
         margin-left: 0.2rem;
         margin-right: 0.5rem;
         position:absolute;
-        top:0;
+        top:-50px;
     }
 
     .abt-info {
